test 2 in strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="sign_in">Sign in</string>
     <string name="learn_more">Learn more</string>
     <string name="south_african_startup_hub">South African Startup Hub</string>
+    <string name="test2">test 2</string>
 </resources>
