--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="email">E-mail</string>
     <string name="learn_more">Learn more</string>
     <string name="south_african_startup_hub">South African Startup Hub</string>
+    <string name="back" />
+    <string name="get_started" />
+    <string name="lorem_ipsum" />
+    <string name="investor" />
+    <string name="find_your_golden_goose" />
+    <string name="benefits" />
+    <string name="the_hub" />
 </resources>
